# medical-rag-chatbot

./: .dockerignore  .env.development  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  exllama.yml  pyproject.toml  vlm.yml
config/: config.yaml
core/: document.py  embedding.py  ollama.py  pdf_utils.py  utils.py
eval/: generation.py  retrieval.py
experiments/: embedding.py  extract_abbreviation_script.py  faiss_service.py  ollama.py  pdf_utils.py  retrieval_evaluation.py
results/: .gitignore
services/: chunking.py  retrieval.py  splitter.py
settings/: settings.py
src/core/: chunking.py  document.py  generation.py  model.py  ollama.py  question_answering.py  utils.py
src/domain/: document.py  evaluation.py  vignette.py
src/eval/: combined.py  generation.py  generation_metrics.py  retrieval.py  retrieval_metrics.py
src/experiments/: .gitignore  add_page_types.py  clinicians_as_judges_nb_to_script.py  extract_abbreviation_script.py  generation_eval.py  generation_retrieval_eval.py  hierarchy_retrieval_evaluation.py  identify_pages_with_flow_charts_and_tables.py  inject_whitespace.py  inject_whitespace_reworked.py  llm_as_a_judge_for_gt_nb_to_script.py  no_retrieval_generation_eval.py  norag_generation_eval.py  ret_gen_analysis.py  retrieval_evaluation.py
src/parsing/: __init__.py  models.py  parse_try_fix.py
src/prompts/: __init__.py  chunking.py  evaluation.py  flowcharts.py  question.py  ragas.py  retrieval_optimization.py  tables.py  utils.py  vignette.py
src/serve/: app.py  exllama.py  qwen.py  qwen3.py
src/services/: chunking.py  question_answering.py  retrieval.py
src/settings/: __init__.py  settings.py
structures/: page.py
