[tool.poetry]
name = "medical-rag-chatbot"
version = "0.1.0"
description = ""
authors = ["00000000014B3659 <cisem.altan@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.44.2"
ipykernel = "^6.29.5"
pillow = "^10.4.0"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
langchain = "^0.3.0"
pypdf = "^5.0.0"
tiktoken = "^0.7.0"
nltk = "^3.9.1"
faiss-cpu = "^1.8.0.post1"
thefuzz = "^0.22.1"
langchain-experimental = "^0.3.2"
langchain-ollama = "^0.2.0"
sentence-transformers = "^3.2.1"
accelerate = "^1.1.1"
exllamav2 = {url = "https://github.com/turboderp/exllamav2/releases/download/v0.2.4/exllamav2-0.2.4+cu121.torch2.5.0-cp312-cp312-linux_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
