[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "00000000014B3659", email = "cisem.altan@tum.de"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "langchain<1.0.0,>=0.3.0",
    "pypdf<6.0.0,>=5.0.0",
    "nomic<4.0.0,>=3.1.2",
    "faiss-cpu<2.0.0.0,>=1.8.0.post1",
    "thefuzz<1.0.0,>=0.22.1",
    "langchain-nomic<1.0.0,>=0.1.3",
    "langchain-experimental<1.0.0,>=0.3.2",
    "mlflow<3.0.0,>=2.20.2",
    "fastapi<1.0.0,>=0.115.12",
    "uvicorn<1.0.0,>=0.34.2",
    "gpt4all>=2.8.2",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
]
name = "medical-rag-chatbot"
version = "0.1.0"
description = ""
readme = "README.md"
